fixed the layout markup on mobile devices

--- a/projects/health/assets/scss/service-cards/_index.scss
+++ b/projects/health/assets/scss/service-cards/_index.scss
@@ -63,8 +63,8 @@
 }
 
 .service-card__sender {
-  line-height: 22px;
-  height: 25px;
+  font-size: 12px;
+  margin-top: 5px;
   color: grey;
   display: flex;
   align-items: center;
